# libmatrix

./: CMakeLists.txt
inc/: libmatrix.h
src/: matrix_add.c  matrix_allocate.c  matrix_copy.c  matrix_deallocate.c  matrix_mul.c  matrix_mul_scalar.c  matrix_print.c  matrix_sub.c
